Fix header vertical alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  line-height:   1.25;
+  line-height:   32px;
   padding:       1rem 0;
   margin-bottom: 1rem;
   display: flex;
